feat(otp-generation-limit): add specification generation limit